# Polycraft_LauncherV2

./: CMakeLists.txt  COPYING.md  changelog.md
buildconfig/: BuildConfig.cpp.in  BuildConfig.h
cmake/: MacOSXBundleInfo.plist.in
cmake/UnitTest/: test.rc
launcher/: Application.cpp  Application.h  CMakeLists.txt
launcher/news/: NewsChecker.cpp
launcher/ui/: MainWindow.cpp  MainWindow.h
launcher/ui/dialogs/: AboutDialog.cpp  AboutDialog.ui  PolycraftUpdateDialog.cpp
launcher/ui/pages/global/: JavaPage.cpp  JavaPage.ui
launcher/ui/setupwizard/: JavaWizardPage.cpp
launcher/ui/widgets/: JavaSettingsWidget.cpp  JavaSettingsWidget.h  playpolycraft.cpp  playpolycraft.h
notsecrets/: CMakeLists.txt  README.md  launcher.rc
